k8s-non-eks/app-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-tomcat"
  namespace: "tomcat"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app: "tomcat"
