k8s-non-eks/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tomcat
spec:
  selector:
    app: tomcat
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
