k8s-non-eks/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: 192.168.178.21
    http:
      paths:
      - backend:
          serviceName: service-tomcat
          servicePort: 8080
        path: /sample
